--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
+*{
+  color: #023968;
+}
+
+.container {
   text-align: center;
+  font-size: 20px;
+  border: solid 2px #023968;
+  background-color: #F0B152;
+  width: 400;
+  height: 350px;
+  margin: 100px auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+label {
+  margin-right: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+input{
+  margin: 10px;
+  padding: 7px;
+  font-size: 16px;
+}
+
+button {
+  font-size: 16px;
+  margin: 20px 10px;
+  padding: 10px 16px;
   color: white;
+  border-radius: 10px;
+  font-weight: bolder;
+  transition: 0.25s;
+  border: none;
 }
 
-.App-link {
-  color: #61dafb;
+.generate {
+  background-color: #05685e;
+}
+.clear {
+  background-color: #f8722e;
+}
+.generate:hover {
+  color: #05685e;
+  background-color: #fff;
+  box-shadow: 0 0.5em 0.5em -0.4em gray;
+  transform: translateY(-0.25em);
+}
+.clear:hover {
+  color: #f8722e;
+  background-color: #fff;
+  box-shadow: 0 0.5em 0.5em -0.4em gray;
+  transform: translateY(-0.25em);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
