--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   font-size: 20px;
   border: solid 2px #023968;
   background-color: #F0B152;
-  width: 400;
+  width: 400px;
   height: 350px;
   margin: 100px auto;
 }
